# bq_mod_notify

./: .env.local  README.md  config.yml  main.py  pyproject.toml
bigquery/: client.py
config/: config.py  config.yml
date_utils/: date.py
notifier/: base.py  slack.py
