[tool.poetry]
name = "bq-mod-notify"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-bigquery = "^3.9.0"
slack-sdk = "^3.21.2"
PyYAML = "^6.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
